# AgentsLab

./: .gitignore  AGENTS.md  AgentsLab.rar  CLAUDE.md  DQL 2.py  DQL.py  README.md  ReadMe.md  STRUCTURE.md  Vanilla_PG.py  Vanilla_PG_2.py  context_sources.yaml  dashboard.yaml  extract_files.py  generate_junctions.cmd  generate_junctions.ps1  project_structure.txt  pyproject.toml  requirements.txt  test_multicategorical.py  tree_to_md.py  universalization.md  vis.py
checkpoints/20250818-140639_dqn_CartPole-v1_s0_58323c/: loss.pt  optimizer.pt  policy.pt  q_net.pt
collected_files/: README.md  agent.py  cartpole.yaml  mlp_small.yaml  seed.py  train.py
configs/: config.yaml  eval.yaml
configs/algorithm/: reinforce.yaml
configs/common/: default.yaml
configs/environment/: cartpole.yaml
configs/logging/: tensorboard.yaml
configs/network/: mpl.yaml
configs/rl/: dqn.yaml  reinforce.yaml
configs/training/: reinforce_cartpole.yaml
logs/: 20250818-140639_dqn_CartPole-v1_s0_58323c.csv  20250818-141433_dqn_CartPole-v1_s0_234b5c.csv
logs/20250818-140639_dqn_CartPole-v1_s0_58323c_tb/: events.out.tfevents.1755515199.DESKTOP-ADI9MVA.24464.0
logs/20250818-141433_dqn_CartPole-v1_s0_234b5c_tb/: events.out.tfevents.1755515673.DESKTOP-ADI9MVA.18784.0
notebooks/: CartPole_DQN.ipynb  DQN_CartPole.ipynb  MARL_VMAS_PPO.ipynb  PPO_gymnasium.ipynb  PPO_vmas.ipynb  marl_ppo_vmas.ipynb  ppo_gym copy 2.ipynb  ppo_gym copy.ipynb  ppo_gym.ipynb  ppo_gym_origin.ipynb  test.ipynb
runs/ppo_pendulum_20250822-192147/: meta.yaml
runs/ppo_pendulum_20250822-202253/: meta.yaml
runs/ppo_pendulum_20250822-202407/: meta.yaml
scripts/: evaluate.py  train.py
scripts/rl/: evaluate.py  train.py  (+2 more)
temp2/: README.md
(+476 files in other folders)
