# блок сборки
[build-system]
requires = ["setuptools>=69", "wheel"]        # что нужно, чтобы собрать пакет
build-backend = "setuptools.build_meta"       # кто собирает (можно hatchling/poetry и т.п.)

# метаданные проекта
[project]
name = "agentslab"
version = "0.1.0"
requires-python = ">=3.9"

# основные зависимости
dependencies = [
  "numpy",
  "matplotlib",
  "jupyter",
  "scipy",
  "torch>=2.7",               # актуальный PyTorch 2.8.0
  "torchrl>=0.9",             # см. релизы TorchRL
  "gymnasium>=1.2",           # Gymnasium 1.2.0
  "pettingzoo>=1.25",         # PettingZoo 1.25.0
  "mpe2>=0.0",                # новый пакет для MPE (импорты mpe2.*)
  "hydra-core>=1.3",
  "pytorch-lightning>=2.5",
  "tensorboard>=2.20",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["agentslab*"]

# CLI-комманды
[project.scripts]
marl-train = "marl_lab.scripts.train:main"
marl-eval  = "marl_lab.scripts.evaluate:main"
# После установки будут доступны команды marl-train и marl-eval

