[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentslab"
version = "0.1.0"
description = "Research lab scaffolding for single-agent and multi-agent RL with TorchRL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Ordevoir"}]
dependencies = [
  "torchrl>=0.8,<0.11",
  "tensordict>=0.5",
  "gymnasium==1.2.0",
  "pettingzoo>=1.25.0",
  "vmas>=1.5.0",
  "mpe2",
  "numpy",
  "matplotlib",
  "tqdm",
  "tensorboard",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentslab*"]
